--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 h1 {
-    color: #222;
+    color: #0e5cc3;
+}
+h2 {
+    color: #007d0a;
 }
 h3 {
-    color: #1b0000;
+    color: #e30202;
 }
 p {
     color: #747272;
